--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -1,5 +1,7 @@
+@use "./../abstracts/variables" as var;
+
 body {
-    font-family: Roboto, "Helvetica Neue", sans-serif;
+    font-family: var.$font-family;
     font-size: 1rem;
     line-height: 1.5;
 }
