--- a/src/sass/theme/_theme.scss
+++ b/src/sass/theme/_theme.scss
@@ -1,22 +1,21 @@
 @use 'sass:map';
 @use '@angular/material' as mat;
+@use "./../../app/common/components/error-message/error-message.theme" as error-message;
 
 @include mat.core();
 
-$currency-converter-primary: mat.define-palette(mat.$indigo-palette);
-$currency-converter-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
-$currency-converter-warn: mat.define-palette(mat.$red-palette);
-
-$currency-converter-theme: mat.define-light-theme(
+$app-theme: mat.define-light-theme(
         (
             color: (
-                primary: $currency-converter-primary,
-                accent: $currency-converter-accent,
-                warn: $currency-converter-warn,
+                primary: mat.define-palette(mat.$indigo-palette),
+                accent: mat.define-palette(mat.$pink-palette, A200, A100, A400),
+                warn: mat.define-palette(mat.$red-palette),
             ),
         )
 );
 
-@include mat.all-component-themes($currency-converter-theme);
+@include mat.all-component-themes($app-theme);
+@include error-message.theme($app-theme);
+
 
 
